# text-to-cad

./: .gitignore  .gitleaks.toml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: codeql.yml  dependency-review.yml  lint.yml  security.yml  test.yml
docs/: ARCHITECTURE.md  BUILD_GUIDE.md  PRD.md  SPEC.md  TEST_REPORT_TEMPLATE.md  TRACEABILITY.md
docs/ADRs/: ADR-0001-cadquery-opencascade-kernel.md  ADR-0002-llm-never-touches-geometry.md  ADR-0003-template-default-freeform-gated.md  ADR-0004-ollama-local-default-cloud-boost.md  ADR-0005-airgapped-licensing-and-obfuscation.md
packaging/: texttocad.spec
packaging/hooks/: README.md
scripts/: build_windows.bat  demo_build.py  install_models.bat  keygen.py  obfuscate_licensing.py  sign_license.py
src/texttocad/: __init__.py  app.py  config.py  logging_setup.py
src/texttocad/geometry/: __init__.py  builders.py  exporters.py  schemas.py  units.py  validate.py
src/texttocad/licensing/: __init__.py  machine_id.py  public_key.pem  rollback.py  rsa_verify.py
src/texttocad/llm/: __init__.py  _http.py  anthropic_backend.py  base.py  llamacpp_backend.py  locality.py  ollama_backend.py  openai_compat_backend.py  router.py  sandbox.py
src/texttocad/llm/prompts/: __init__.py  fewshot_v1.json  system_v1.md
src/texttocad/pipeline/: __init__.py  correct.py  generate.py  state.py
src/texttocad/reporting/: __init__.py  report.py
src/texttocad/ui/: __init__.py  activation.py  main_window.py  panels.py  viewer.py  worker.py
tests/acceptance/: test_acceptance.py  test_s_scenarios.py
tests/geometry/: test_builders.py  test_end_to_end.py  test_exporters.py  test_schemas.py
tests/pipeline/: test_integration.py  test_pipeline.py
tests/sandbox/: test_sandbox_ast.py  test_sandbox_run.py
tests/ui/: test_ui_smoke.py
tests/unit/: test_backends.py  test_config.py  test_licensing.py  test_locality.py  test_logging.py  test_packaging.py  test_prompts.py  test_router.py
